# monero-oxide

./: Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/actions/bitcoin/: action.yml
.github/actions/build-dependencies/: action.yml
.github/actions/monero/: action.yml
.github/actions/monero-wallet-rpc/: action.yml
.github/actions/test-dependencies/: action.yml
.github/workflows/: daily-deny.yml  lint.yml  monero-tests.yaml  networks-tests.yml  no-std.yml  pages.yml  tests.yml
audits/divisors/: README.md
audits/fcmp++/: LICENSE  README.md
audits/fcmps/: README.md
audits/generalized-bulletproofs/: LICENSE  README.md
audits/helioselene/: LICENSE  README.md  tower_cycle_25519.sage
crypto/dalek-ff-group/src/: field.rs  lib.rs
crypto/divisors/: Cargo.toml  LICENSE  README.md
crypto/divisors/src/: barycentric.rs  divisor.rs  ec.rs  inversion.rs  lib.rs  poly.rs  sizes.rs
crypto/divisors/src/tests/: mod.rs  poly.rs
crypto/ed448/src/: backend.rs  point.rs
crypto/fcmps/: Cargo.toml  LICENSE
crypto/fcmps/circuit-abstraction/: Cargo.toml
crypto/fcmps/circuit-abstraction/src/: lib.rs
crypto/fcmps/ec-gadgets/: Cargo.toml
crypto/fcmps/ec-gadgets/src/: dlog.rs  lib.rs
crypto/fcmps/src/: circuit.rs  lib.rs  tape.rs  tests.rs  tree.rs
crypto/fcmps/src/gadgets/: interactive.rs  mod.rs
crypto/fcmps/src/prover/: blinds.rs  mod.rs
crypto/frost/src/: algorithm.rs  sign.rs
crypto/frost/src/tests/: mod.rs
crypto/generalized-bulletproofs/: Cargo.toml  LICENSE  README.md
crypto/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  inner_product.rs  lib.rs  lincomb.rs  point_vector.rs  scalar_vector.rs  transcript.rs
crypto/generalized-bulletproofs/src/tests/: arithmetic_circuit_proof.rs  inner_product.rs  mod.rs
crypto/generalized-bulletproofs/tests/: arithmetic_circuit_proof.rs
crypto/helioselene/: Cargo.toml  LICENSE
crypto/helioselene/benches/: helioselene.rs
crypto/helioselene/src/: ciphersuite.rs  field.rs  lib.rs  point.rs
fcmp-plus-plus/: Cargo.toml  deny.toml  rust-toolchain.toml
fcmp-plus-plus/.github/workflows/: lint.yml  no-std.yml  tests.yml
fcmp-plus-plus/audits/helioselene/: tower_cycle_25519.sage
fcmp-plus-plus/crypto/divisors/: Cargo.toml
fcmp-plus-plus/crypto/divisors/src/: lib.rs
fcmp-plus-plus/crypto/fcmps/: Cargo.toml
fcmp-plus-plus/crypto/fcmps/circuit-abstraction/: Cargo.toml
fcmp-plus-plus/crypto/fcmps/ec-gadgets/: Cargo.toml
fcmp-plus-plus/crypto/fcmps/src/: lib.rs  params.rs
fcmp-plus-plus/crypto/generalized-bulletproofs/: Cargo.toml
fcmp-plus-plus/crypto/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  lib.rs  scalar_vector.rs
fcmp-plus-plus/crypto/helioselene/: Cargo.toml
fcmp-plus-plus/crypto/helioselene/src/: ciphersuite.rs  field.rs  point.rs
fcmp-plus-plus/networks/monero/generators/: Cargo.toml
fcmp-plus-plus/tests/no-std/: Cargo.toml
fcmp-plus-plus/tests/no-std/src/: lib.rs
monero-oxide/: Cargo.toml  README.md
monero-oxide/generators/: Cargo.toml
monero-oxide/generators/src/: hash_to_point.rs  lib.rs
monero-oxide/generators/src/tests/: mod.rs
monero-oxide/io/: Cargo.toml
monero-oxide/io/src/: compressed_point.rs  lib.rs
monero-oxide/primitives/: Cargo.toml
monero-oxide/primitives/src/: lib.rs  tests.rs  unreduced_scalar.rs
monero-oxide/ringct/borromean/: Cargo.toml
monero-oxide/ringct/borromean/src/: lib.rs
monero-oxide/ringct/bulletproofs/: Cargo.toml  build.rs
monero-oxide/ringct/bulletproofs/src/: batch_verifier.rs  core.rs  lib.rs
monero-oxide/ringct/bulletproofs/src/original/: inner_product.rs  mod.rs
monero-oxide/ringct/bulletproofs/src/plus/: aggregate_range_proof.rs  mod.rs  transcript.rs  weighted_inner_product.rs
monero-oxide/ringct/bulletproofs/src/tests/: mod.rs
monero-oxide/ringct/bulletproofs/src/tests/original/: mod.rs
monero-oxide/ringct/clsag/: Cargo.toml
monero-oxide/ringct/clsag/src/: lib.rs  multisig.rs  tests.rs
monero-oxide/ringct/fcmp++/: Cargo.toml  README.md  build.rs
monero-oxide/ringct/fcmp++/src/: lib.rs
monero-oxide/ringct/fcmp++/src/sal/: legacy_multisig.rs  mod.rs  multisig.rs
monero-oxide/ringct/fcmp++/src/tests/: mod.rs
monero-oxide/ringct/fcmp++/src/tests/sal/: legacy_multisig.rs  mod.rs  multisig.rs
monero-oxide/ringct/mlsag/: Cargo.toml
monero-oxide/ringct/mlsag/src/: lib.rs
monero-oxide/rpc/: Cargo.toml  README.md
monero-oxide/rpc/simple-request/: Cargo.toml  README.md
monero-oxide/rpc/simple-request/src/: lib.rs
monero-oxide/rpc/simple-request/tests/: tests.rs
monero-oxide/rpc/src/: lib.rs
monero-oxide/src/: block.rs  lib.rs  merkle.rs  ring_signatures.rs  ringct.rs  transaction.rs
monero-oxide/src/tests/: transaction.rs
monero-oxide/verify-chain/: Cargo.toml
monero-oxide/verify-chain/src/: main.rs
monero-oxide/wallet/: Cargo.toml  README.md
monero-oxide/wallet/address/: Cargo.toml
monero-oxide/wallet/address/src/: base58check.rs  lib.rs  tests.rs
monero-oxide/wallet/base58/: Cargo.toml
monero-oxide/wallet/base58/src/: lib.rs
monero-oxide/wallet/src/: decoys.rs  extra.rs  lib.rs  output.rs  scan.rs  view_pair.rs
monero-oxide/wallet/src/send/: eventuality.rs  mod.rs  multisig.rs  tx.rs  tx_keys.rs
monero-oxide/wallet/src/tests/: extra.rs  scan.rs
monero-oxide/wallet/tests/: add_data.rs  eventuality.rs  send.rs  wallet2_compatibility.rs
monero-oxide/wallet/tests/runner/: mod.rs
networks/monero/generators/src/: lib.rs
networks/monero/rpc/src/: lib.rs
networks/monero/src/: block.rs  transaction.rs
networks/monero/wallet/src/: decoys.rs  extra.rs  lib.rs  scan.rs
orchestration/runtime/: Dockerfile
orchestration/src/: main.rs  mimalloc.rs
orchestration/src/networks/: bitcoin.rs  monero.rs
processor/src/networks/: monero.rs
substrate/client/: Cargo.toml
substrate/client/tests/common/: mod.rs
substrate/coins/pallet/: Cargo.toml
substrate/runtime/: build.rs
substrate/runtime/src/: abi.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: lib.rs
tests/verify-chain/: Cargo.toml
(+15 files in other folders)
