[package]
name = "ec-divisors"
version = "0.1.0"
description = "A library for calculating elliptic curve divisors"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/crypto/divisors"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ciphersuite", "ff", "group"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.4", default-features = false }

rand_core = { version = "0.6", default-features = false }
zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

subtle = { version = "2", default-features = false }
ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"], optional = true }
dalek-ff-group = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }
dalek-ff-group = { version = "0.4", default-features = false }

[features]
std = ["std-shims/std", "zeroize/std", "subtle/std", "ff/std", "dalek-ff-group?/std"]
ed25519 = ["crypto-bigint", "dalek-ff-group"]
default = ["std"]
