[package]
name = "full-chain-membership-proofs"
version = "0.1.0"
description = "Implementation of full-chain membership proofs for Confidential Transaction protocols"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/crypto/fcmps"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["monero", "ciphersuite", "ff", "group"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "^0.1.1", default-features = false }

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

generic-array = { version = "1", default-features = false, features = ["alloc"] }

blake2 = { version = "0.10", default-features = false }

multiexp = { version = "0.4", default-features = false, features = ["batch"] }
ciphersuite = { version = "0.4", default-features = false }

ec-divisors = { path = "../divisors", default-features = false }
generalized-bulletproofs = { path = "../generalized-bulletproofs", default-features = false }
generalized-bulletproofs-circuit-abstraction = { path = "./circuit-abstraction", default-features = false }
generalized-bulletproofs-ec-gadgets = { path = "./ec-gadgets", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

ciphersuite = { version = "0.4", features = ["ed25519"] }

dalek-ff-group = "0.4.2"
helioselene = { path = "../helioselene" }

ec-divisors = { path = "../divisors", features = ["ed25519"] }
generalized-bulletproofs = { path = "../generalized-bulletproofs", features = ["tests"] }

[features]
std = [
  "std-shims/std",

  "rand_core/std",

  "zeroize/std",

  "blake2/std",

  "multiexp/std",
  "ciphersuite/std",

  "ec-divisors/std",
  "generalized-bulletproofs/std",
  "generalized-bulletproofs-circuit-abstraction/std",
  "generalized-bulletproofs-ec-gadgets/std"
]
default = ["std"]
