[package]
name = "helioselene"
version = "0.1.0"
description = "Implementation of Helios and Selene, a curve cycle towering Ed25519"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/crypto/helioselene"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["helios", "selene", "ed25519", "ff", "group"]
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.4", default-features = false, optional = true }

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

blake2 = { version = "0.10", default-features = false }
ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

dalek-ff-group = { version = "0.5", default-features = false }

ec-divisors = { path = "../divisors", default-features = false, optional = true }
ciphersuite = { version = "0.4.2", default-features = false }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

crypto-bigint = { version = "0.5", default-features = false, features = ["rand"] }

ff-group-tests = "0.13"

[[bench]]
name = "helioselene"
harness = false

[features]
alloc = ["std-shims", "ciphersuite/alloc", "ec-divisors"]
std = [
  "alloc",

  "std-shims/std",

  "rand_core/std",

  "zeroize/std",
  "subtle/std",

  "blake2/std",
  "ff/std",

  "dalek-ff-group/std",

  "ec-divisors/std",
  "ciphersuite/std",
]
default = ["std"]
