[package]
name = "monero-io"
version = "0.1.0"
description = "Serialization functions, as within the Monero protocol"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/io"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.4", default-features = false }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

[features]
std = ["std-shims/std"]
default = ["std"]
