[package]
name = "monero-oxide-verify-chain"
version = "0.1.0"
description = "A binary to deserialize and verify the Monero blockchain"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/tests/verify-chain"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
publish = false
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
rand_core = { version = "0.6", default-features = false, features = ["std"] }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc", "std"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "std"] }

monero-oxide = { path = "../../monero-oxide", default-features = false, features = ["std", "compile-time-generators"] }
monero-rpc = { path = "../../monero-oxide/rpc", default-features = false, features = ["std"] }
monero-simple-request-rpc = { path = "../../monero-oxide/rpc/simple-request", default-features = false }

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
