[package]
name = "serai-no-std-tests"
version = "0.1.0"
description = "A crate to test no-std builds of Serai crates work"
license = "MIT"
repository = "https://github.com/kayabaNerve/serai/tree/develop/tests/no-std"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
ec-divisors = { path = "../../crypto/divisors", default-features = false }
generalized-bulletproofs = { path = "../../crypto/generalized-bulletproofs", default-features = false }
generalized-bulletproofs-circuit-abstraction = { path = "../../crypto/fcmps/circuit-abstraction", default-features = false }
generalized-bulletproofs-ec-gadgets = { path = "../../crypto/fcmps/ec-gadgets", default-features = false }
full-chain-membership-proofs = { path = "../../crypto/fcmps", default-features = false }

monero-fcmp-plus-plus = { path = "../../networks/monero/ringct/fcmp++", default-features = false }
