[package]
name = "monero-fcmp-plus-plus"
version = "0.1.0"
description = "Implementation of FCMP++s for Monero"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/ringct/fcmp++"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["monero", "ciphersuite", "ff", "group"]
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "^0.1.1", default-features = false }

rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false }

generic-array = { version = "1", default-features = false, features = ["alloc"] }

blake2 = { version = "0.10", default-features = false }

multiexp = { version = "0.4", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
dalek-ff-group = { version = "0.4", default-features = false }
helioselene = { path = "../../../crypto/helioselene", default-features = false }
ciphersuite = { version = "0.4", default-features = false, features = ["ed25519"] }

generalized-bulletproofs = { path = "../../../crypto/generalized-bulletproofs", default-features = false }
ec-divisors = { path = "../../../crypto/divisors", default-features = false, features = ["ed25519"] }
generalized-bulletproofs-ec-gadgets = { path = "../../../crypto/fcmps/ec-gadgets", default-features = false }
fcmps = { package = "full-chain-membership-proofs", path = "../../../crypto/fcmps", default-features = false }

monero-generators = { path = "../../generators", default-features = false }

rand_chacha = { version = "0.3", default-features = false, optional = true }
transcript = { package = "flexible-transcript", version = "0.3", default-features = false, features = ["recommended"], optional = true }
modular-frost = { version = "0.10", default-features = false, features = ["ed25519"], optional = true }

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false }
transcript = { package = "flexible-transcript", version = "0.3", default-features = false, features = ["recommended"] }
modular-frost = { version = "0.10", default-features = false, features = ["ed25519", "tests"] }

[features]
std = [
  "std-shims/std",

  "rand_core/std",
  "zeroize/std",

  "blake2/std",

  "multiexp/std",
  "dalek-ff-group/std",
  "helioselene/std",
  "ciphersuite/std",

  "generalized-bulletproofs/std",
  "ec-divisors/std",
  "generalized-bulletproofs-ec-gadgets/std",
  "fcmps/std",

  "monero-generators/std",

  "rand_chacha?/std",
  "transcript?/std",
]
multisig = ["std", "transcript", "modular-frost"]
default = ["std"]
