[package]
name = "monero-simple-request-rpc"
version = "0.1.0"
description = "RPC connection to a Monero daemon via simple-request, built around monero-oxide"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/rpc/simple-request"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "^1.5", default-features = false, features = ["alloc", "std"] }
digest_auth = { version = "0.3", default-features = false }
simple-request = { version = "0.2", default-features = false, features = ["tls"] }
tokio = { version = "1", default-features = false }

monero-rpc = { path = "..", default-features = false, features = ["std"] }

[dev-dependencies]
monero-address = { path = "../../wallet/address", default-features = false, features = ["std"] }

tokio = { version = "1", default-features = false, features = ["macros"] }
